# harmont-cli

./: .gitattributes  .gitignore  .nvim.lua  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  install.sh
crates/hm/: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs
crates/hm-config/: Cargo.toml
crates/hm-config/src/: creds.rs  lib.rs
crates/hm-dsl-engine/: Cargo.toml  build.rs
crates/hm-dsl-engine/harmont-py/: pyproject.toml
crates/hm-dsl-engine/harmont-py/harmont/: __init__.py  _bun.py  _cargo.py  _cmake.py  _composer.py  _decorator.py  _deps.py  _detect.py  _dotnet.py  _duration.py  _elixir.py  _elm.py  _envelope.py  _go.py  _gradle.py  _haskell.py  _js.py  _npm.py  _ocaml.py  _perl.py  _pipeline.py  _python.py  _registry.py  _ruby.py  _rust.py  _step.py  _target.py  _toolchain.py  _typing.py  _unwrap.py  _zig.py  bun.py  cmake.py  elm.py  go.py  json_emit.py  pipeline.py  triggers.py
crates/hm-dsl-engine/harmont-py/tests/: conftest.py  examples_render_conftest.py  test_bun.py  test_cargo.py  test_cmake.py  test_decorator.py  test_detect.py  test_duration.py  test_e2e_fixtures.py  test_elixir.py  test_envelope.py  test_examples_render.py  test_go.py  test_gradle.py  test_har_28_example.py  test_haskell.py  test_haskell_cabal_alias.py  test_js.py  test_json_emit.py  test_keygen.py  test_keys.py  test_npm.py  test_ocaml.py  test_pipeline.py  test_pipeline_lowering.py  test_py_uv.py  test_python.py  test_registry.py  test_ruby.py  test_rust.py  test_rust_parity.py  test_setup.py  test_sh_shorthand.py  test_step_chain.py  test_step_sh.py  test_target.py  test_target_cross_module.py  test_target_unwrap.py  test_timeout.py  test_toolchain.py  (+5 more)
crates/hm-dsl-engine/harmont-ts/: CLAUDE.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
crates/hm-dsl-engine/harmont-ts/src/: cache.ts  duration.ts  envelope.ts  index.ts  keygen.ts  pipeline.ts  step.ts  triggers.ts
crates/hm-dsl-engine/harmont-ts/tests/: duration.test.ts  e2e-fixtures.test.ts  envelope.test.ts  examples.test.ts  integration.test.ts  keygen.test.ts  keys.test.ts  pipeline.test.ts  setup.test.ts  step.test.ts  timeout.test.ts  triggers.test.ts
crates/hm-dsl-engine/src/: bundled_sources.rs  detect.rs  lib.rs  python_engine.rs  ts_engine.rs
crates/hm-dsl-engine/tests/: cross_sdk_cache_test.rs  python_engine_test.rs  ts_engine_test.rs
crates/hm-exec/: Cargo.toml
crates/hm-exec/src/: capabilities.rs  error.rs  lib.rs  outcome.rs  request.rs
crates/hm-exec/src/cloud/: backend.rs  mod.rs  watch.rs
crates/hm-exec/src/local/: archive.rs  backend.rs  cache.rs  mod.rs  scheduler.rs  source.rs
crates/hm-exec/tests/: backend_contract.rs
crates/hm-fixtures/: Cargo.toml
crates/hm-fixtures/src/: lib.rs
crates/hm-pipeline-ir/: Cargo.toml
crates/hm-pipeline-ir/src/: graph.rs  lib.rs
crates/hm-pipeline-ir/tests/: e2e_fixtures.rs  graph_build.rs  graph_serde.rs  schema_snapshot.rs
crates/hm-pipeline-ir/tests/snapshots/: graph_serde__pipeline_graph_snapshot.snap  schema_snapshot__command_step_schema_is_stable.snap
crates/hm-plugin-cloud/: Cargo.toml
crates/hm-plugin-cloud/src/: cli.rs  config.rs  creds.rs  http.rs  lib.rs  settings.rs  state.rs
crates/hm-plugin-cloud/src/api/: mod.rs  types.rs
crates/hm-plugin-cloud/src/auth/: login.rs  logout.rs  mod.rs  whoami.rs
crates/hm-plugin-cloud/src/verbs/: billing.rs  build.rs  job.rs  mod.rs  org.rs  pipeline.rs  run.rs
crates/hm-plugin-docker/: Cargo.toml
crates/hm-plugin-docker/src/: decision.rs  extism_host.rs  image_name.rs  lib.rs
crates/hm-plugin-output-json/: Cargo.toml
crates/hm-plugin-output-json/src/: lib.rs
crates/hm-plugin-protocol/: Cargo.toml
crates/hm-plugin-protocol/src/: error.rs  events.rs  executor.rs  hook.rs  host_abi.rs  ir.rs  lib.rs  manifest.rs  subcommand.rs
crates/hm-plugin-protocol/tests/: round_trip.rs  schema_snapshots.rs
crates/hm-plugin-protocol/tests/snapshots/: schema_snapshots__docker_commit_args.snap  schema_snapshots__docker_exec_args.snap  schema_snapshots__docker_extract_args.snap  schema_snapshots__docker_start_args.snap  schema_snapshots__plugin_manifest.snap
crates/hm-plugin-sdk/: Cargo.toml
crates/hm-plugin-sdk/src/: executor.rs  hook.rs  host.rs  lib.rs  macros.rs  manifest.rs  output.rs  subcommand.rs
crates/hm-render/: Cargo.toml
crates/hm-render/src/: human.rs  json.rs  lib.rs  progress.rs  spinner.rs
crates/hm-util/: Cargo.toml
crates/hm-util/src/: cow.rs  dirs.rs  lib.rs
crates/hm-util/src/os/: dirs.rs  fs.rs  mod.rs
crates/hm-vm/: Cargo.toml
crates/hm-vm/src/: backend.rs  docker.rs  lib.rs  registry.rs  types.rs  vm.rs
crates/hm/src/: cli.rs  config.rs  context.rs  creds_store.rs  dispatcher.rs  error.rs  fs_util.rs  lib.rs  main.rs  signal.rs
crates/hm/src/builtin/: mod.rs  plugin.rs  version.rs
crates/hm/src/cli/: dev.rs  external.rs  init.rs  mod.rs  pipelines.rs  (+4 more)
crates/hm/tests/: cache_round_trip.rs  chain_failure_render.rs  cmd_cloud_gate.rs  cmd_cloud_login_paste.rs  cmd_cloud_run.rs  cmd_cloud_whoami.rs  cmd_init.rs  cmd_pipelines.rs  cmd_plugin.rs  cmd_render.rs  cmd_run_local_autoselect.rs  cmd_run_local_format.rs  cmd_run_local_orchestrated.rs  cmd_version.rs  config_layered.rs  cow_workspace.rs  default_image_inheritance.rs  dev_integration.rs  keep_going.rs  local_e2e.rs  local_fork_cache.rs  local_parallelism.rs  plugin_host_fns.rs  plugin_kv_concurrency.rs  plugin_manifest.rs  plugin_registry.rs  runner_dispatch.rs
examples/cmake-advanced/: CMakeLists.txt
examples/cmake-advanced/.harmont/: pipeline.py
examples/cmake-advanced/.hm/: pipeline.py  pipeline.ts
examples/cmake-advanced/src/: math.cpp  math.hpp
examples/cmake-advanced/tests/: test_math.cpp
examples/haskell/: README.md  example.cabal
examples/haskell/.harmont/: pipeline.py  pipeline.ts
examples/haskell/test/: Spec.hs
examples/python-uv/: README.md  pyproject.toml
examples/python-uv/.harmont/: pipeline.py  pipeline.ts
examples/python-uv/.hm/: pipeline.py  pipeline.ts
examples/python-uv/tests/: test_example.py
(+423 files in other folders)
