[workspace]
resolver = "2"
members = [
    "crates/hm",
    "crates/hm-plugin-protocol",
    "crates/hm-pipeline-ir",
    "crates/hm-util",
    "crates/hm-plugin-cloud",
    "crates/hm-dsl-engine",
]
default-members = [
    "crates/hm",
    "crates/hm-plugin-protocol",
    "crates/hm-pipeline-ir",
    "crates/hm-util",
    "crates/hm-plugin-cloud",
    "crates/hm-dsl-engine",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/harmont-dev/harmont-cli"

[workspace.dependencies]
hm-plugin-protocol = { path = "crates/hm-plugin-protocol", version = "0.0.0-dev" }
hm-plugin-cloud    = { path = "crates/hm-plugin-cloud",    version = "0.0.0-dev" }
hm-pipeline-ir     = { path = "crates/hm-pipeline-ir",     version = "0.0.0-dev" }
hm-util            = { path = "crates/hm-util",            version = "0.0.0-dev" }
hm-dsl-engine      = { path = "crates/hm-dsl-engine",     version = "0.0.0-dev" }
anyhow      = "1"
async-trait = "0.1"
dirs        = "6"
figment     = { version = "0.10", features = ["toml", "env"] }
daggy       = { version = "0.9", features = ["serde-1"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
schemars    = { version = "0.8", features = ["preserve_order", "semver", "uuid1", "chrono"] }
semver      = { version = "1", features = ["serde"] }
uuid        = { version = "1", features = ["serde", "v4"] }
chrono      = { version = "0.4", features = ["serde"] }
thiserror   = "2"
derive_more = { version = "1", default-features = false, features = ["full"] }
smart-default = "0.7"
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["rt"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unreachable_pub = "deny"
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }
# Internal workspace crates do not publish to crates.io from this repo;
# the Harmont SaaS is the product. Package metadata lints are noise.
cargo_common_metadata = "allow"
# schemars 0.8 pulls older indexmap / wit-bindgen transitively; we
# can't fix without bumping schemars.
multiple_crate_versions = "allow"
# `pub(crate)` inside a non-pub module triggers this, but `unreachable_pub`
# already enforces the same invariant from the rustc side.
redundant_pub_crate = "allow"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
mem_forget = "deny"
implicit_clone = "deny"
lossy_float_literal = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
exit = "warn"
