[package]
name = "hm-config"
version = "0.0.0-dev"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Layered (project/user/env) configuration + credential storage for the hm CLI."

[dependencies]
hm-util = { workspace = true }
derive_more = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
# `test` brings in `figment::Jail` for isolated env-var/cwd testing.
figment = { workspace = true, features = ["test"] }

[lints]
workspace = true
