[package]
name = "hm-dsl-engine"
version = "0.0.0-dev"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DSL engine: evaluate Python/TypeScript pipeline definitions via system runtimes."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow      = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
include_dir = "0.7"
tempfile    = "3"
tokio       = { version = "1", features = ["process", "fs"] }
tracing     = "0.1"
which       = "7"

[dev-dependencies]
tempfile    = "3"
tokio       = { version = "1", features = ["macros", "rt-multi-thread"] }
which       = "7"

[lints]
workspace = true
