[package]
name = "hm-fixtures"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Test fixtures (WASM plugins) for the hm crate. Built via `cargo build --target wasm32-wasip1 -p hm-fixtures`; not consumed on the host target."

[lib]
path = "src/lib.rs"

# Each fixture is its own [[bin]] so it compiles to a separate .wasm.
[[bin]]
name = "noop_executor"
path = "src/bin/noop_executor.rs"

[[bin]]
name = "recording_hook"
path = "src/bin/recording_hook.rs"

[[bin]]
name = "failing_subcommand"
path = "src/bin/failing_subcommand.rs"

[[bin]]
name = "host_fn_probe"
path = "src/bin/host_fn_probe.rs"

[[bin]]
name = "bad_api_version"
path = "src/bin/bad_api_version.rs"

[[bin]]
name = "freestyle_runner"
path = "src/bin/freestyle_runner.rs"

[dependencies]
hm-plugin-sdk = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
semver        = { workspace = true }

[lints]
workspace = true

[package.metadata.fixtures]
# Read by the test helper in the consuming crate (hm). The fixtures
# themselves don't compile to wasm on `cargo build` from the workspace
# root — they need an explicit `--target wasm32-wasip1`.
