[package]
name = "hm-pipeline-ir"
version = "0.0.0-dev"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pipeline IR — the v0 wire-format schema consumed by hm."

[dependencies]
daggy      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
schemars   = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
schemars = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
