[package]
name = "hm-plugin-cloud"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in cloud client plugin for the hm CLI."
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
hm-plugin-sdk      = { workspace = true }
hm-plugin-protocol = { workspace = true }
extism-pdk         = { workspace = true, features = ["http"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
semver             = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
clap               = { workspace = true, features = ["derive"] }
anyhow             = { workspace = true }
url                = "2"
base64             = "0.22"
sha2               = "0.10"

[lints]
workspace = true
