[package]
name = "hm-plugin-cloud"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cloud client library for the hm CLI."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hm-util            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
clap               = { version = "4", features = ["derive"] }
anyhow             = "1"
url                = "2"
base64             = "0.22"
sha2               = "0.10"
toml               = "0.8"
reqwest            = { version = "0.13", default-features = false, features = ["rustls", "json"] }
tokio              = { version = "1", features = ["net", "time", "sync"] }
webbrowser         = "1"
dialoguer          = "0.11"
tracing            = { workspace = true }

[lints]
workspace = true
