[package]
name = "hm-plugin-cloud"
version = "0.0.0-dev"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cloud client library for the hm CLI."
keywords = ["ci", "harmont", "cloud"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[dependencies]
harmont-cloud      = { workspace = true }
harmont-cloud-raw  = { workspace = true }
hm-exec            = { workspace = true }
hm-render          = { workspace = true }
hm-config          = { workspace = true }
hm-plugin-protocol = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
uuid               = { workspace = true }
clap               = { version = "4", features = ["derive"] }
anyhow             = "1"
base64             = "0.22"
tokio              = { version = "1", features = ["net", "rt", "time", "sync", "macros"] }
webbrowser         = "1"
dialoguer          = "0.11"
tracing            = { workspace = true }

[lints]
workspace = true
