[package]
name = "hm-plugin-docker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Built-in Docker step-executor plugin for the hm CLI."
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
hm-plugin-sdk      = { workspace = true }
hm-plugin-protocol = { workspace = true }
extism-pdk         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
semver             = { workspace = true }

[lints]
workspace = true
