[package]
name = "hm-plugin-sdk"
version = "0.0.0-dev"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Authoring SDK for hm plugins. Wraps extism-pdk with hm-specific traits and macros."

[lib]
crate-type = ["rlib"]

[dependencies]
hm-plugin-protocol = { workspace = true }
extism-pdk         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }

[lints]
workspace = true
