[package]
name = "hm-util"
version = "0.0.0-dev"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared OS and filesystem utilities for Harmont crates."

[dependencies]
dirs = "6"
tokio = { version = "1", features = ["rt", "fs"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
