[package]
name = "hm-vm"
version = "0.0.0-dev"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
derive_more = { workspace = true }

rusqlite = { version = "0.37", features = ["bundled"] }

bollard = { version = "0.18", optional = true }
futures = { version = "0.3", optional = true }
tar = { version = "0.4", optional = true }

[features]
default = ["docker-backend"]
docker-backend = ["dep:bollard", "dep:futures", "dep:tar"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
