[package]
name = "harmont-cli"
version = "0.0.0-dev"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line client for the Harmont CI platform."
readme = "README.md"
keywords = ["ci", "harmont", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
]

[lib]
name = "harmont_cli"
path = "src/lib.rs"

[[bin]]
name = "hm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "color", "suggestions", "wrap_help"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "json", "stream", "multipart", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
owo-colors = "4"
console = "0.16"
indicatif = "0.18"
tracing-indicatif = "0.3"
comfy-table = { version = "7", features = ["custom_styling"] }
terminal_size = "0.4"
tar = "0.4"
flate2 = "1"
fs2 = "0.4"
ignore = "0.4"
tempfile = "3"
anyhow = "1"
thiserror = "2"
backon = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "query"] }
webbrowser = "1"
rand = "0.8"
uuid = { version = "1", features = ["serde"] }
bytes = "1"
futures = "0.3"
futures-util = "0.3"
bollard = "0.18"
which = "6"
hm-pipeline-ir     = { workspace = true }
hm-plugin-protocol = { workspace = true }
hm-util = { workspace = true }
hm-plugin-cloud = { path = "../hm-plugin-cloud" }
hm-dsl-engine   = { workspace = true }
daggy          = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
smart-default = { workspace = true }
once_cell = "1"
hex = "0.4"
is_ci = "1.2.0"

[features]
default = []
py-env = []

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
tempfile = "3"

[lints]
workspace = true
