[package]
name = "harmont-cli"
version = "0.0.0-dev"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line client for the Harmont CI platform."
readme = "README.md"
keywords = ["ci", "harmont", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
]

[lib]
name = "harmont_cli"
path = "src/lib.rs"

[[bin]]
name = "hm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "color", "suggestions", "wrap_help"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "json", "stream", "multipart", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
figment = { workspace = true }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.18"
tracing-indicatif = "0.3"
terminal_size = "0.4"
fs2 = "0.4"
tempfile = "3"
anyhow = "1"
thiserror = "2"
backon = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-chrome = "0.7"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "query"] }
webbrowser = "1"
rand = "0.8"
uuid = { version = "1", features = ["serde"] }
bytes = "1"
futures = "0.3"
futures-util = "0.3"
which = "6"
hm-pipeline-ir     = { workspace = true }
hm-plugin-protocol = { workspace = true }
hm-util = { workspace = true }
hm-config = { workspace = true }
hm-plugin-cloud = { workspace = true }
harmont-cloud   = { workspace = true }
hm-vm           = { workspace = true, features = ["docker-backend"] }
hm-dsl-engine   = { workspace = true }
hm-render       = { workspace = true }
hm-exec         = { workspace = true }
async-trait     = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
smart-default = { workspace = true }
once_cell = "1"
hex = "0.4"
is_ci = "1.2.0"

[features]
default = []
py-env = []

[dev-dependencies]
daggy = { workspace = true }
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
tempfile = "3"
which = "6"

[lints]
workspace = true
