cabal-version: 3.0
name:          example
version:       0.1.0.0
build-type:    Simple

library
    exposed-modules: Lib
    hs-source-dirs:  src
    build-depends:   base >=4.18 && <5
    default-language: Haskell2010
    ghc-options:     -Wall

test-suite example-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base, example
    default-language: Haskell2010
