[project]
name = "harmont-example-python"
version = "0.1.0"
description = "Tiny Harmont uv example."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "ty>=0.0.1a7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example"]

[tool.ruff]
line-length = 100

